--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vue-youtube/component": "^0.0.6",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "pinia": "^2.0.28",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@vitejs/plugin-vue": "^4.5.0",
+    "@vue-youtube/core": "^0.0.6",
     "vite": "^5.0.0"
   }
 }
