--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@vue-youtube/component": "^0.0.6",
+    "ionicons": "^7.2.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "pinia": "^2.0.28",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "vue": "^3.3.8",
+    "vue-ionicons": "^3.0.5",
     "vue-router": "4",
     "vue-toastification": "^2.0.0-rc.5",
     "vuetify": "3.0.6"
