--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-ionicons": "^3.0.5",
     "vue-router": "4",
     "vue-toastification": "^2.0.0-rc.5",
+    "vue-typed-js": "^0.1.2",
     "vuetify": "3.0.6"
   },
   "devDependencies": {
