--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-leaflet": "^4.2.1",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
+    "typed.js": "^2.1.0",
     "vue": "^3.3.8",
     "vue-ionicons": "^3.0.5",
     "vue-router": "4",
