--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
+    "@mdi/font": "^7.4.47",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vue-youtube/core": "^0.0.6",
     "vite": "^5.0.0"
