--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vue-youtube/component": "^0.0.6",
     "animate.css": "^4.1.1",
+    "axios": "^1.7.2",
     "ionicons": "^7.2.1",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
